--- a/angular-client/src/app/components/participants/participant-profile/participant-profile.component.html
+++ b/angular-client/src/app/components/participants/participant-profile/participant-profile.component.html
@@ -24,7 +24,7 @@
     </mat-card-actions>
   </mat-card>
 
-  <app-casefiles [orderedCases]="orderedCases" [participant]="participantSelected" (loadParticipant)="loadParticipant()"></app-casefiles>
+  <app-casefiles [orderedCases]="orderedCases" (loadParticipant)="loadParticipant()"></app-casefiles>
   <app-notes [orderedNotes]="orderedNotes" [participant]="participantSelected" (loadParticipant)="loadParticipant()"></app-notes>
   <app-documents [orderedDocuments]="orderedDocuments" [participant]="participantSelected" (loadParticipant)="loadParticipant()"></app-documents>
 </div>
