--- a/angular-client/src/app/components/casefiles/case-immigration/case-immigration.component.html
+++ b/angular-client/src/app/components/casefiles/case-immigration/case-immigration.component.html
@@ -1,3 +1,9 @@
-<p>
-  case-immigration works!
-</p>
+<div class="hint">
+  Select the resources for this case</div>
+<mat-form-field>
+  <mat-select multiple [(ngModel)]="mycase.contactedResources" name="contactedResources">
+    <span *ngFor="let resource of resources">
+      <mat-option *ngIf="resource.kind === mycase.type" [value]="resource._id">{{resource.name}}</mat-option>
+    </span>
+  </mat-select>
+</mat-form-field>
