Added other info

--- a/angular-client/src/app/components/participants/add-participant-intake/add-participant-intake.component.html
+++ b/angular-client/src/app/components/participants/add-participant-intake/add-participant-intake.component.html
@@ -3,6 +3,9 @@
 
     <mat-horizontal-stepper [linear]="isLinear">
 
+      <!-- TODO: Complete forms with validation, submission, proper field inputs -->
+      <!-- NOTE: The following form is meant for displaying prototype of forms -->
+
       <!-- Referral Step -->
       <mat-step [stepControl]="referralForm">
         <div class="step-header">Referral Information</div>
