Further work on the phonelog task #133

--- a/angular-client/src/app/components/phonelog/add-phonelog/add-phonelog.component.html
+++ b/angular-client/src/app/components/phonelog/add-phonelog/add-phonelog.component.html
@@ -51,6 +51,14 @@
     <input matInput placeholder="Phone number" name="phonenumber" formControlName="phonenumber">
   </mat-form-field>
 
+  <mat-form-field class="assignedTo">
+    <mat-select placeholder="Assign to:" [(value)]="assignedTo" formControlName="assignedTo">
+      <mat-option *ngFor="let worker of allWorkers" [disabled]="isDisabled(worker._id)" [value]="worker._id">
+        {{ worker.name }} ({{ worker.email }})
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+
   <mat-form-field class="message">
     <textarea matInput placeholder="Message" matTextareaAutosize matAutosizeMinRows="5" name="message" formControlName="message"></textarea>
     <mat-hint align="start">Their message, when to call, extension number...</mat-hint>
